libs/wingc/src/lsp/snapshots/hovers/var_inside_closure.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\npreflight var goooo: str\n```\n---"
range:
  start:
    line: 2
    character: 10
  end:
    line: 2
    character: 15

