libs/wingc/src/lsp/snapshots/hovers/var_inside_inflight_closure.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\ninflight var goooo: str\n```"
range:
  start:
    line: 2
    character: 10
  end:
    line: 2
    character: 15

