libs/wingc/src/lsp/snapshots/hovers/variadic_args.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\npreflight addMany: preflight (...items: Array<str>): void\n```\n---\n### Parameters\n- `...items` — `Array<str>`"
range:
  start:
    line: 8
    character: 6
  end:
    line: 8
    character: 13

